added arch tests

--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Api/Divstack.Company.Estimation.Tool.Valuations.Api.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Api/Divstack.Company.Estimation.Tool.Valuations.Api.csproj
@@ -4,8 +4,13 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
-
+  
+  <ItemGroup>
+    <InternalsVisibleTo Include="Divstack.Company.Estimation.Tool.Valuations.ArchTests" />
+  </ItemGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Valuations.Domain\Divstack.Company.Estimation.Tool.Valuations.Domain.csproj" />
     <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Valuations.Infrastructure\Divstack.Company.Estimation.Tool.Valuations.Infrastructure.csproj" />
