--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Persistance/Divstack.Company.Estimation.Tool.Valuations.Persistance.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Persistance/Divstack.Company.Estimation.Tool.Valuations.Persistance.csproj
@@ -6,7 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="6.0.2" />
-    <PackageReference Include="Marten" Version="6.0.0-alpha.6" />
+    <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" />
+    <PackageReference Include="Marten" Version="5.11.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
