--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,16 +13,24 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
+    - name: Install .NET 7 SDK
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 7.x.x
+        
     - name: Checkout 
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
+        
     - name: Setup dotnet
       uses: actions/setup-dotnet@v2
       with:
         dotnet-version: '7.x'
+        
     - name: Install dependencies
       run: dotnet restore
+      
     - name: Build
       run: dotnet build
          
