added docker compose

--- a/Src/Modules/Inquiries/Divstack.Company.Estimation.Tool.Inquiries.Api/inquries-appsettings.json
+++ b/Src/Modules/Inquiries/Divstack.Company.Estimation.Tool.Inquiries.Api/inquries-appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Inquiries": ""
+    "Inquiries": "Server=localhost;Database=devdb;Uid=root;Pwd=root;"
   },
   "FeatureManagement": {
     "InquiriesModule": true
