--- a/Src/Modules/Payments/Divstack.Company.Estimation.Tool.Payments.Api/payments-appsettings.json
+++ b/Src/Modules/Payments/Divstack.Company.Estimation.Tool.Payments.Api/payments-appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Payments": ""
+    "Payments": "mongodb://localhost:27017/"
   },
   "StripeApi": {
     "ApiKey": ""
