--- a/Src/Modules/Priorities/Divstack.Company.Estimation.Tool.Priorities.Api/priorities-appsettings.json
+++ b/Src/Modules/Priorities/Divstack.Company.Estimation.Tool.Priorities.Api/priorities-appsettings.json
@@ -8,6 +8,6 @@
     "PrioritiesModule": true
   },
   "ConnectionStrings": {
-    "Priorities": ""
+    "Priorities": "mongodb://localhost:27017/"
   }
 }
