--- a/Src/Modules/Push/Divstack.Company.Estimation.Tool.Push/push-appsettings.json
+++ b/Src/Modules/Push/Divstack.Company.Estimation.Tool.Push/push-appsettings.json
@@ -1,5 +1,8 @@
 ﻿{
   "FeatureManagement": {
     "PushModule": true
+  },
+  "ConnectionStrings": {
+    "Notifications": "mongodb://localhost:27017/"
   }
 }
