--- a/Src/Modules/Services/Divstack.Company.Estimation.Tool.Services.Api/services-appsettings.json
+++ b/Src/Modules/Services/Divstack.Company.Estimation.Tool.Services.Api/services-appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Services": ""
+    "Services": "mongodb://localhost:27017/"
   },
   "FeatureManagement": {
     "ServicesModule": true
