--- a/Src/Modules/Users/Divstack.Company.Estimation.Tool.Users.Api/users-appsettings.json
+++ b/Src/Modules/Users/Divstack.Company.Estimation.Tool.Users.Api/users-appsettings.json
@@ -17,7 +17,7 @@
     "Init": "true"
   },
   "ConnectionStrings": {
-    "Users": ""
+    "Users": "Server=localhost;Database=devdb;Uid=root;Pwd=root;"
   },
   "FeatureManagement": {
     "UsersModule": true
