--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Api/valuations-appsettings.json
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Api/valuations-appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Valuations": ""
+    "Valuations": "Server=postgres;Database=testdb;User Id=postgres;Password=postgres;"
   },
   "FeatureManagement": {
     "ValuationModule": true
