fix docker compose

--- a/Src/Modules/Sms/Divstack.Company.Estimation.Tool.Sms.Core/sms-core-appsettings.json
+++ b/Src/Modules/Sms/Divstack.Company.Estimation.Tool.Sms.Core/sms-core-appsettings.json
@@ -1,12 +1,12 @@
 ﻿{
   "PhoneNumbers": {
-    "From": ""
+    "From": "+1 123 456 7890"
   },
   "Twillo": {
-    "AccountSid": "",
-    "AuthToken": ""
+    "AccountSid": "dev",
+    "AuthToken": "dev"
   },
   "FeatureManagement": {
-    "SmsModule": false
+    "SmsModule": true
   }
 }
