--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.csproj
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.csproj
@@ -25,7 +25,7 @@
     <PackageReference Include="Microsoft.OpenApi" Version="1.4.5" />
     <PackageReference Include="NServiceBus" Version="8.0.2" />
     <PackageReference Include="NServiceBus.Extensions.Hosting" Version="2.0.0" />
-    <PackageReference Include="NServiceBus.MongoDB" Version="7.2.1" />
+    <PackageReference Include="NServiceBus.RabbitMQ" Version="8.0.1" />
     <PackageReference Include="NServiceBus.Storage.MongoDB" Version="3.0.0" />
     <PackageReference Include="NServiceBus.Transport.AzureServiceBus" Version="3.1.2" />
     <PackageReference Include="Scrutor" Version="4.2.0" />
