--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -16,7 +16,7 @@ services:
     ports:
       - "3306:3306"
     volumes:
-      - mysql:/var/lib/mysql
+      - mysql:/`var`/lib/mysql
   postgres:
     image: postgres:12
     restart: always
