--- a/Src/Modules/Users/Tests/Divstack.Company.Estimation.Tool.Users.Infrastructure.Tests/Divstack.Company.Estimation.Tool.Users.Infrastructure.Tests.csproj
+++ b/Src/Modules/Users/Tests/Divstack.Company.Estimation.Tool.Users.Infrastructure.Tests/Divstack.Company.Estimation.Tool.Users.Infrastructure.Tests.csproj
@@ -1,25 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
-        <Nullable>enable</Nullable>
-
-        <IsPackable>false</IsPackable>
-    </PropertyGroup>
-
     <ItemGroup>
-        <PackageReference Include="Faker.Net" Version="2.0.154" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0-preview-20221003-04" />
-        <PackageReference Include="NSubstitute" Version="4.4.0" />
-        <PackageReference Include="NUnit" Version="3.13.3" />
-        <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
-        <PackageReference Include="coverlet.collector" Version="3.2.0">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-    </ItemGroup>
-
-    <ItemGroup>
+      <ProjectReference Include="..\..\..\..\Shared\Testing\Divstack.Company.Estimation.Tool.Shared.Testing\Divstack.Company.Estimation.Tool.Shared.Testing.csproj" />
       <ProjectReference Include="..\..\Divstack.Company.Estimation.Tool.Users.Infrastructure\Divstack.Company.Estimation.Tool.Users.Infrastructure.csproj" />
     </ItemGroup>
 
