--- a/Src/Shared/Testing/Divstack.Company.Estimation.Tool.Shared.Testing/Divstack.Company.Estimation.Tool.Shared.Testing.csproj
+++ b/Src/Shared/Testing/Divstack.Company.Estimation.Tool.Shared.Testing/Divstack.Company.Estimation.Tool.Shared.Testing.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <PackageReference Include="Faker.Net" Version="2.0.154" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0-preview-20221003-04" />
+    <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="NSubstitute" Version="4.4.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
