--- a/Src/Shared/Testing/Divstack.Company.Estimation.Tool.Shared.Testing/Divstack.Company.Estimation.Tool.Shared.Testing.csproj
+++ b/Src/Shared/Testing/Divstack.Company.Estimation.Tool.Shared.Testing/Divstack.Company.Estimation.Tool.Shared.Testing.csproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="Faker.Net" Version="2.0.154" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0-preview-20221003-04" />
     <PackageReference Include="Moq" Version="4.18.4" />
