--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.IntegrationsEvents/Divstack.Company.Estimation.Tool.Valuations.IntegrationsEvents.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.IntegrationsEvents/Divstack.Company.Estimation.Tool.Valuations.IntegrationsEvents.csproj
@@ -6,6 +6,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.collector" Version="3.2.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="NServiceBus" Version="8.0.2" />
   </ItemGroup>
 
