--- a/Src/Modules/Priorities/Tests/Divstack.Company.Estimation.Tool.Priorities.IntegrationTests/Divstack.Company.Estimation.Tool.Priorities.IntegrationTests.csproj
+++ b/Src/Modules/Priorities/Tests/Divstack.Company.Estimation.Tool.Priorities.IntegrationTests/Divstack.Company.Estimation.Tool.Priorities.IntegrationTests.csproj
@@ -13,6 +13,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="coverlet.collector" Version="3.2.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
       <PackageReference Include="NServiceBus.Testing" Version="8.0.1" />
       <PackageReference Include="Testcontainers" Version="2.4.0" />
