--- a/Src/Modules/Services/Tests/Divstack.Company.Estimation.Tool.Services.IntegrationsTests/Divstack.Company.Estimation.Tool.Services.IntegrationsTests.csproj
+++ b/Src/Modules/Services/Tests/Divstack.Company.Estimation.Tool.Services.IntegrationsTests/Divstack.Company.Estimation.Tool.Services.IntegrationsTests.csproj
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="34.0.2" />
+    <PackageReference Include="coverlet.collector" Version="3.2.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Faker.Net" Version="2.0.154" />
     <PackageReference Include="FluentAssertions" Version="6.8.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
