--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
       with:
         dotnet-version: '7.x' # SDK Version to use.
   
-    - name: Install dotnet-coverage
+    - name: Install dotCover
       run:  dotnet tool install --global JetBrains.dotCover.GlobalTool
     - name: Install sonarscanner-dotnet
       run:  dotnet tool install --global dotnet-sonarscanner
@@ -53,7 +53,7 @@ jobs:
       run: |
            dotnet sonarscanner begin /v:1.${{ github.run_number }} /d:sonar.cs.dotcover.reportsPaths=dotCover.Output.html  /d:sonar.verbose=true /d:sonar.language=cs /o:"kamilbaczek" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$SONAR_TOKEN" /key:"kamilbaczek_Estimation-Tool"
            dotnet build --no-incremental
-           dotnet dotcover test --dcReportType=HTML
+           dotnet dotcover test --dcReportType=HTML --Output="dotCover.Output.html"
            dotnet sonarscanner end /d:sonar.login="$SONAR_TOKEN"
 
   security:
