--- a/Src/Modules/Priorities/Tests/Divstack.Company.Estimation.Tool.Priorities.Domain.Tests/Divstack.Company.Estimation.Tool.Priorities.Domain.Tests.csproj
+++ b/Src/Modules/Priorities/Tests/Divstack.Company.Estimation.Tool.Priorities.Domain.Tests/Divstack.Company.Estimation.Tool.Priorities.Domain.Tests.csproj
@@ -1,10 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <SonarQubeTestProject>true</SonarQubeTestProject>
+  </PropertyGroup>
   
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="3.2.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
