--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests/Divstack.Company.Estimation.Tool.Valuations.Domain.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Nullable>disable</Nullable>
+    <SonarQubeTestProject>true</SonarQubeTestProject>
   </PropertyGroup>
 
   <ItemGroup>
